# bubbletea-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: API-BUBBLES-RS.md  API-BUBBLETEA-RS.md  API.md  RELEASE.md
examples/: README.md
examples/altscreen-toggle/: Cargo.toml  README.md  main.rs
examples/autocomplete/: Cargo.toml  README.md  main.rs
examples/cellbuffer/: Cargo.toml  README.md  debug.rs  debug_main.rs  main.rs
examples/chat/: Cargo.toml  README.md  main.rs
examples/chat/tests/: integration.rs
examples/composable-views/: Cargo.toml  README.md  main.rs
examples/credit-card-form/: Cargo.toml  README.md  main.rs
examples/credit-card-form/tests/: integration.rs
examples/debounce/: Cargo.toml  README.md  main.rs
examples/exec/: Cargo.toml  README.md  main.rs
examples/file-picker/: Cargo.toml  README.md  main.rs
examples/focus-blur/: Cargo.toml  README.md  main.rs
examples/fullscreen/: Cargo.toml  README.md  main.rs
examples/glamour/: Cargo.toml  README.md  main.rs
examples/help/: Cargo.toml  README.md  main.rs
examples/help/tests/: integration.rs
examples/http/: Cargo.toml  README.md  main.rs
examples/list-default/: Cargo.toml  README.md  main.rs
examples/list-default/tests/: integration.rs
examples/list-fancy/: Cargo.toml  README.md  main.rs  test_list_pagination.rs  test_paginator.rs
examples/list-fancy/tests/: integration.rs
examples/list-simple/: Cargo.toml  README.md  main.rs  test_dots.rs
examples/list-simple/tests/: integration.rs
examples/mouse/: Cargo.toml  README.md  main.rs
examples/package-manager/: Cargo.toml  README.md  main.rs
examples/pager/: Cargo.toml  README.md  main.rs
examples/paginator/: Cargo.toml  README.md  main.rs
examples/pipe/: Cargo.toml  README.md  main.rs
examples/prevent-quit/: Cargo.toml  README.md  main.rs
examples/progress-animated/: Cargo.toml  README.md  main.rs
examples/progress-animated/tests/: integration.rs
examples/progress-download/: Cargo.toml  README.md  main.rs
examples/progress-download/tests/: integration.rs
examples/progress-static/: Cargo.toml  README.md  main.rs
examples/progress-static/tests/: integration.rs
examples/realtime/: Cargo.toml  README.md  main.rs
examples/realtime/tests/: integration.rs
examples/result/: Cargo.toml  README.md  main.rs
examples/result/tests/: integration.rs
examples/send-msg/: Cargo.toml  README.md  main.rs
examples/sequence/: Cargo.toml  README.md  main.rs
examples/set-window-title/: Cargo.toml  README.md  main.rs
examples/simple/: Cargo.toml  README.md  main.rs
examples/simple/tests/: integration.rs
examples/spinner/: Cargo.toml  README.md  main.rs
examples/spinner/tests/: integration.rs
examples/spinners/: Cargo.toml  README.md  main.rs
examples/spinners/tests/: integration.rs
examples/split-editors/: Cargo.toml  README.md  main.rs
examples/stopwatch/: Cargo.toml  README.md  main.rs
examples/suspend/: Cargo.toml  README.md  main.rs
examples/table/: Cargo.toml  README.md  main.rs
examples/table-resize/: Cargo.toml  README.md  main.rs
examples/tabs/: Cargo.toml  README.md  main.rs
examples/textarea/: Cargo.toml  README.md  main.rs
examples/textarea/tests/: integration.rs
examples/textinput/: Cargo.toml  README.md  main.rs
examples/textinput/tests/: integration.rs
examples/textinputs/: Cargo.toml  README.md  main.rs
examples/textinputs/tests/: integration.rs
examples/timer/: Cargo.toml  README.md  main.rs
examples/timer-advanced/: Cargo.toml  README.md  main.rs
examples/tui-daemon-combo/: Cargo.toml  README.md  main.rs
examples/views/: Cargo.toml  README.md  main.rs
examples/window-size/: Cargo.toml  README.md  main.rs
examples/window-size/tests/: integration.rs
src/: command.rs  error.rs  event.rs  gradient.rs  input.rs  lib.rs  logging.rs  memory.rs  model.rs  program.rs  terminal.rs
tests/: batch_streaming.rs  command_tests.rs  custom_input_tests.rs  env_tests.rs  error_tests.rs  event_tests.rs  input_handler_tests.rs  input_tests.rs
