[package]
name = "autocomplete-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autocomplete"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../../" }
crossterm = "0.27"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
