[package]
name = "autocomplete-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autocomplete"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../../" }
crossterm = "0.29"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
bubbletea-widgets = "0.1.8"
lipgloss-extras = { version = "0.0.8", features = ["full"] }
