[package]
name = "composable-views"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "composable-views"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
bubbletea-widgets = "0.1.6"
lipgloss-extras = { version = "0.0.8", features = ["full"] }