[package]
name = "composable-views"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "composable-views"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
bubbletea-widgets = "0.1.9"
lipgloss-extras = { version = "0.1.0", features = ["full"] }