[package]
name = "help-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "help"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
unicode-width = "0.2"
bubbletea-widgets = "0.1.9"
lipgloss-extras = { version = "0.1.0", features = ["full"] }