[package]
name = "list-default-example"
version = "0.1.0"
edition = "2021"
default-run = "list-default"

[[bin]]
name = "list-default"
path = "main.rs"

# Removed debug binaries that don't exist anymore

[dependencies]
bubbletea-rs = { path = "../.." }
bubbletea-widgets = "0.1.12"
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
strip-ansi-escapes = "0.2"