[package]
name = "list-fancy-example"
version = "0.1.0"
edition = "2021"
default-run = "list-fancy"

[[bin]]
name = "list-fancy"
path = "main.rs"

[[bin]]
name = "test-paginator"
path = "test_paginator.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
bubbletea-widgets = "0.1.12"
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"