[package]
name = "list-simple-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list-simple"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
bubbletea-widgets = "0.1.6"
lipgloss-extras = { version = "0.0.8", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }