[package]
name = "package-manager-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "package-manager"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"