[package]
name = "pipe-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipe"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../../" }
bubbletea-widgets = "0.1.12"
lipgloss-extras = { version = "0.1.1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
