[package]
name = "realtime-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "realtime"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
bubbletea-widgets = "0.1.12"
lipgloss-extras = { version = "0.1.1", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"