[package]
name = "send-msg-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send-msg"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"