[package]
name = "table-example"
version = "0.1.0"
edition = "2021"
default-run = "table"

[[bin]]
name = "table"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
lipgloss-extras = { version = "0.1.1", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }