[package]
name = "tui-daemon-combo-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui-daemon-combo"
path = "main.rs"

[dependencies]
bubbletea-rs = { path = "../.." }
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
rand = "0.9"
log = "0.4"
env_logger = "0.11"